<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff">




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExercises"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/my_exercises"
        android:textColor="@color/black"
        app:icon="@drawable/fitness_center_24px"
        app:iconGravity="textTop"
        app:iconSize="48dp"
        app:iconTint="#13a8ca"
        app:iconPadding="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNew"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/whats_new"
        android:textColor="@color/black"
        app:icon="@drawable/local_fire_department_24px"
        app:iconGravity="textTop"
        app:iconSize="48dp"
        app:iconTint="#13a8ca"
        app:iconPadding="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProgress"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/my_progress"
        android:textColor="@color/black"
        app:icon="@drawable/clock_loader_60_24px"
        app:iconGravity="textTop"
        app:iconSize="48dp"
        app:iconTint="#13a8ca"
        app:iconPadding="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccount"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/account"
        app:icon="@drawable/person_24px"
        android:textColor="@color/black"
        app:iconGravity="textTop"
        app:iconSize="48dp"
        app:iconTint="#13a8ca"
        app:iconPadding="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoals"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/goals"
        android:textColor="@color/black"
        app:icon="@drawable/sports_score_24px"
        app:iconGravity="textTop"
        app:iconSize="48dp"
        app:iconTint="#13a8ca"
        app:iconPadding="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAll"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/all_exercises"
        android:textColor="@color/black"
        app:icon="@drawable/apps_24px"
        app:iconGravity="textTop"
        app:iconSize="48dp"
        app:iconTint="#13a8ca"
        app:iconPadding="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="16sp"
        app:icon="@drawable/logout_24px"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="48dp"
        app:iconTint="#13a8ca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>